Bug 432779 - Konsole understands multiple dots as a file path
Summary: Konsole understands multiple dots as a file path
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-11 01:09 UTC by Felipe Kinoshita
Modified: 2021-02-15 23:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video showing observed result (748.10 KB, video/x-matroska)
2021-02-11 01:09 UTC, Felipe Kinoshita
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Felipe Kinoshita 2021-02-11 01:09:01 UTC
Created attachment 135586 [details]
video showing observed result

When some program outputs multiple dots konsole understands it as a file path but it isn't so when trying to open it konsole will show a error message.

STEPS TO REPRODUCE
1. press "." multiple times or use some program that outputs a lot of dots (e.g zypper when installing a package).
2. open it (e.g with ctrl + click) as it was a file.

OBSERVED RESULT
konsole shows a error message.

EXPECTED RESULT
konsole should not see multiple dots as a file path.

Linux/KDE Plasma: openSUSE Tumbleweed
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Comment 2 Ahmad Samir 2021-02-15 23:09:04 UTC
Git commit ac0b5ef4a8ffe7ae92508c113f6eaabadd62e0e4 by Ahmad Samir.
Committed on 15/02/2021 at 22:42.
Pushed by hindenburg into branch 'master'.

FileFilter: don't create a hotspot for '................'

Only '.' and '..' could be valid hotspots, but '..........' isn't. The
latter is used by some CLI tools to indicate progress ...etc.

To test, in any dir use `ls -a`, Ctrl + clicking '.' and '..' should
open the current dir and parent of the current dir respectively.

Type .......... at the prompt, before it would get underlined, after no
hotspot will be created for it.

M  +6    -0    src/filterHotSpots/FileFilter.cpp

https://invent.kde.org/utilities/konsole/commit/ac0b5ef4a8ffe7ae92508c113f6eaabadd62e0e4